FIPS-1386: Exception im Tabelleneditor unter WinXP https://jira.faktorzehn.de/browse/FIPS-1386 :: added option -XX:+AggressiveOpts for surefire plugin